Fixed content issues
I fixed some content layout issues.

--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -35,14 +35,14 @@ h2 {
 
 .item-thumbnail-left, .item-thumbnail-left .item-content {
   padding-left: 106px;
-  min-height: 95px; }
+  min-height: 90px; }
 
   .item-thumbnail-left > img:first-child, .item-thumbnail-left .item-image, .item-thumbnail-left .item-content > img:first-child, .item-thumbnail-left .item-content .item-image {
     position: absolute;
     top: 10px;
     left: 10px;
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 75px;
+    max-height: 75px;
     width: 100%; }
 
 
